--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   workmanager: ^0.5.0
+  background_fetch: ^1.1.0
   shared_preferences: ^2.0.15
   flutter_local_notifications: ^9.7.0
   hive: ^2.0.4
