--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   hive_flutter: ^1.0.0
   path_provider: ^2.0.0
   http: ^0.13.5
+  intl: ^0.17.0
 
 
   # The following adds the Cupertino Icons font to your application.
